<resources>
    <string name="app_name">NavigationExample</string>
    <string name="profile">Profile</string>
    <string name="Notifications">Notifications</string>
    <string name="collections">Collections</string>
    <string name="Collections">Collections</string>
    <string name="inbx">Inbox</string>
    <string name="others">Others</string>
    <string name="support">Support</string>
    <string name="AboutUS">About Us</string>
    <string name="error_owner">Error Owner</string>
    <string name="team_flucloxin">Team Flucloxin</string>
    <string name="verified">Verified</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="Settings">Settings</string>
    <string name="hello_satkania">Hello Satkania</string>
    <string name="authorised">Authorised ✔</string>
</resources>