<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menuProfile"
        android:icon="@drawable/profile"
        android:title="@string/profile"

        />

    <item android:id="@+id/menuNotifications"
        android:icon="@drawable/notifications"
        android:title="@string/Notifications"

        />

    <item android:id="@+id/menucollections"
        android:icon="@drawable/collection"
        android:title="@string/Collections"

        />

    <item android:id="@+id/menuInbox"
        android:icon="@drawable/inbox"
        android:title="@string/inbx"

        />
    <item android:title="@string/others">

        <menu>

            <item android:id="@+id/menuSettings"
                android:icon="@drawable/settings"
                android:title="@string/Settings"/>

            <item android:id="@+id/menuSupport"
                android:icon="@drawable/sypport"
                android:title="@string/support"/>

            <item android:id="@+id/menuAboutus"
                android:icon="@drawable/aboutus"
                android:title="@string/AboutUS"/>

        </menu>

    </item>



</menu>